--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./index.html" title="">Doma</a></li>
+            <li><a href="./index.html" title="">HomePage</a></li>
             <li><a href="./project.html" title="">Page</a>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
