--- a/case1.html
+++ b/case1.html
@@ -19,7 +19,7 @@
   <link href="" rel="stylesheet">
 
 
-  <title>Title page</title>
+  <title>MAASP Calculator | A-annulus Case 1</title>
 
   <link href="./main.550dcf66.css" rel="stylesheet">
   <link rel="stylesheet" href="case1.css">
@@ -40,19 +40,19 @@
           </button>
           <a class="navbar-brand" href="./index.html" title="">
             <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
-            Mashup Template
+            MAASP Calculator
           </a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./project.html" title="">Project</a></li>
+            <!-- <li><a href="./project.html" title="">Project</a></li>
             <li>
               <p>
                 <a href="./components.html" class="btn btn-default navbar-btn" title="">Components</a>
               </p>
-            </li>
+            </li> -->
 
           </ul>
         </div>
@@ -64,6 +64,16 @@
     <form action="">
       <div>
         <h1>A-annulus Case 1</h1>
+        <div class="description row">
+          <img class="case-image" src="/assets/images/anusCase1.png" alt="">
+          <p class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+            PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        <hr>
         <table>
           <thead>
             <tr class="row">
@@ -71,10 +81,13 @@
               <th>TVD, ft</th>
               <th>Grade</th>
               <th>Yp, psi</th>
-              <th>ID, inch</th>
-              <th>Thick, inch</th>
+              <th>OD, inch</th>
+              <th>Th, inch</th>
+              <th>ACR, inch/years</th>
+              <th>No Years</th>
+              <th>New Th, inch</th>
               <th>Burst, psi</th>
-              <th>ID/Thick.</th>
+              <th>OD/Th.</th>
               <th>Collapse, psi</th>
             </tr>
           </thead>
@@ -100,6 +113,9 @@
               <td><input value="40000" disabled type="text" id="n3"></td>
               <td><input type="text" id="n4"></td>
               <td><input type="text" id="n5"></td>
+              <td><input type="text" id="new5"></td>
+              <td><input type="text" id="new6"></td>
+              <td><input disabled type="text" id="new7"></td>
               <td><input disabled type="text" id="n6"></td>
               <td><input disabled type="text" id="n7"></td>
               <td><input disabled type="text" id="n8"></td>
@@ -125,6 +141,9 @@
               <td><input value="40000" disabled type="text" id="n11"></td>
               <td><input type="text" id="n12"></td>
               <td><input type="text" id="n13"></td>
+              <td><input type="text" id="new8"></td>
+              <td><input type="text" id="new9"></td>
+              <td><input disabled type="text" id="new10"></td>
               <td><input disabled type="text" id="n14"></td>
               <td><input disabled type="text" id="n15"></td>
               <td><input disabled type="text" id="n16"></td>
@@ -179,6 +198,9 @@
               <td></td>
               <td>BF</td>
               <td><input type="text" id="n26"></td>
+              <td></td>
+              <td>Well head PR,psi</td>
+              <td><input type="text" id="new27"></td>
             </tr>
             <tr class="row">
               <td>Point 7A</td>
@@ -203,27 +225,31 @@
           <tbody>
             <tr>
               <td>Point 1</td>
-              <td id="n30">fsfs</td>
+              <td id="n30"></td>
             </tr>
             <tr>
               <td>Point 2</td>
-              <td><input type="text" id="n31"></td>
+              <td id="n31"></td>
             </tr>
             <tr>
               <td>Point 3, packer collapse</td>
-              <td><input type="text" id="n32"></td>
+              <td id="n32"></td>
             </tr>
             <tr>
               <td>Point 3, element rating</td>
-              <td><input type="text" id="n33"></td>
+              <td id="n33"></td>
             </tr>
             <tr>
               <td>Point 5</td>
-              <td><input type="text" id="n34"></td>
+              <td id="n34"></td>
             </tr>
             <tr>
               <td>Point 7A</td>
-              <td><input type="text" id="n35"></td>
+              <td id="n35"></td>
+            </tr>
+            <tr>
+              <td>Point 8</td>
+              <td id="n36"></td>
             </tr>
           </tbody>
         </table>
@@ -241,13 +267,12 @@
 
 
         <div class="col-xs-12">
-          <h3>Mountain</h3>
+          <h3>Oxygen Team</h3>
 
           <div class="row">
             <div class="col-xs-12 col-sm-7">
-              <p><small>Website created with <a href="http://www.mashup-template.com/"
-                    title="Create website with free html template">Mashup Template</a>/<a
-                    href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></small>
+              <p><small>Website created with support of<a href="https://github.com/nurdared"
+                    title="Create website with free html template"> Nurdaulet Shamilov</a>
               </p>
             </div>
             <div class="col-xs-12 col-sm-5">
