--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./index.html" title="">HomePage</a></li>
-            <li><a href="./project.html" title="">Page</a>
+            <li><a href="./index.html" title="">Home</a></li>
+            <!-- <li><a href="./project.html" title="">Page</a> -->
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                 aria-expanded="false">
@@ -49,7 +49,7 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="Preview">
-                <li><a href="#">Case 1</a></li>
+                <li><a href="/case1.html">Case 1</a></li>
                 <li><a href="#">Case 2</a></li>
                 <li><a href="#">Case 3</a></li>
                 <li><a href="#">Case 4</a></li>
@@ -61,11 +61,11 @@
 
             </li>
 
-            <li>
+            <!-- <li>
               <p>
                 <a href="./components.html" class="btn btn-default navbar-btn" title="">Components</a>
               </p>
-            </li>
+            </li> -->
 
           </ul>
         </div>
