--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="carousel-inner" role="listbox">
 
               <div class="item active">
-                <img class="img-responsive" src="./assets/images/img-06.jpg" alt="First slide">
+                <img class="img-responsive" src="./assets/images/img-07.jpg" alt="First slide">
                 <div class="carousel-caption card-shadow reveal">
 
                   <h3>What is the MAASP?</h3>
@@ -147,7 +147,7 @@
                 </div>
               </div>
               <div class="item">
-                <img class="img-responsive" src="./assets/images/img-07.jpg" alt="First slide">
+                <img class="img-responsive" src="./assets/images/img-06.jpg" alt="First slide">
                 <div class="carousel-caption card-shadow reveal">
 
                   <h3>Key benefits of calculator</h3>
@@ -192,7 +192,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Merey.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Merey Temirkas</h3>
           <h4>Front-end developer</h4>
@@ -203,7 +203,7 @@
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <i class="fa fa-instagram"></i>
             </a>
             <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -211,7 +211,7 @@
           </p>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Ernazar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Yernazar Samenov</h3>
           <h4>CEO</h4>
@@ -222,14 +222,14 @@
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <i class="fa fa-instagram"></i>
             </a>
             <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
         </div>
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Ansar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Ansar Seitzhanov</h3>
           <h4>Developer</h4>
@@ -240,14 +240,14 @@
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <i class="fa fa-instagram"></i>
             </a>
             <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
         </div>
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Aizhan.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Ansar Seitzhanov</h3>
           <h4>Developer</h4>
@@ -258,7 +258,7 @@
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <i class="fa fa-instagram"></i>
             </a>
             <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -346,7 +346,7 @@
                   <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
                 <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
+                  <i class="fa fa-instagram"></i>
                 </a>
                 <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
                   <i class="fa fa-linkedin" aria-hidden="true"></i>
