--- a/index.html
+++ b/index.html
@@ -195,72 +195,72 @@
         <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Merey.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Merey Temirkas</h3>
-          <h4>Front-end developer</h4>
+          <h4>Web developer</h4>
           <p>Sed elementum vehicula nisl, a egestas velit rhoncus nec.Cras vel sapien tincidunt, lacinia risus vel,
             imperdiet neque.</p>
           <p>
-            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.facebook.com/m.temirkas" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.instagram.com/temirkas.merey/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.linkedin.com/in/merey-temirkas/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
         </div>
 
         <div class="col-xs-12 col-md-3">
-          <img src="./assets/images/Ernazar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
-          <h3>Yernazar Samenov</h3>
-          <h4>CEO</h4>
+          <img src="./assets/images/Ansar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Ansar Seitzhanov</h3>
+          <h4>Team Lead</h4>
           <p>Praesent at feugiat est, at faucibus ipsum. Aenean condimentum mauris vel malesuadav pulvinar. Vestibulum
             sit amet hendrerit leo, quis vehicula mi.</p>
           <p>
-            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.facebook.com/ansar.seitzhanov" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.instagram.com/ansarseitzhanov/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-          </p>
-        </div>
-        <div class="col-xs-12 col-md-3">
-          <img src="./assets/images/Ansar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
-          <h3>Ansar Seitzhanov</h3>
-          <h4>Developer</h4>
-          <p>Busce rutrum nisi non dui placerat sodales. Vivamus feugiat rutrum malesuada. Nulla volutpat sapien ac
-            gravida varius</p>
-          <p>
-            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-instagram"></i>
-            </a>
-            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.linkedin.com/in/ansar-s-067815124/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
         </div>
         <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Aizhan.jpg" alt="" class="reveal img-responsive reveal-content image-center">
-          <h3>Ansar Seitzhanov</h3>
-          <h4>Developer</h4>
+          <h3>Aizhan Umerbayeva</h3>
+          <h4>Project manager</h4>
           <p>Busce rutrum nisi non dui placerat sodales. Vivamus feugiat rutrum malesuada. Nulla volutpat sapien ac
             gravida varius</p>
           <p>
             <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.instagram.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.linkedin.com/in/aizhan-umerbayeva-a21719146/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+        <div class="col-xs-12 col-md-3">
+          <img src="./assets/images/Ernazar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Yernazar Samenov</h3>
+          <h4>Economist</h4>
+          <p>Busce rutrum nisi non dui placerat sodales. Vivamus feugiat rutrum malesuada. Nulla volutpat sapien ac
+            gravida varius</p>
+          <p>
+            <a href="https://www.facebook.com/profile.php?id=100009266536851" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.instagram.com/yerna___/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/yernazar-samenov-58a922181/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
