added instruction in case1

--- a/case1.html
+++ b/case1.html
@@ -66,12 +66,15 @@
         <h1>A-annulus Case 1</h1>
         <div class="description row">
           <img class="case-image" src="/assets/images/Acase1.png" alt="">
-          <p class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum.</p>
+          <p class="text">Instruction:
+            <br>1. Set input variables for each casing
+            <br>2. Take average corrosion rate (ACR) from Project passport Table 5
+            <br>3. Set depth of required points
+            <br>4. Set fluid properties and safety factors
+            <br>5. Click on the button calculate to calculate MAASP         
+            <br>6. Click on the button reset to reser input data
+          </p>
+             
         </div>
         <hr>
         <table>
