--- a/index.html
+++ b/index.html
@@ -195,9 +195,8 @@
         <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Merey.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Merey Temirkas</h3>
-          <h4>Web developer</h4>
-          <p>Sed elementum vehicula nisl, a egestas velit rhoncus nec.Cras vel sapien tincidunt, lacinia risus vel,
-            imperdiet neque.</p>
+          <h4>Web Developer</h4>
+          <p>Responsible for designing, building, or maintaining of website and software application.</p>
           <p>
             <a href="https://www.facebook.com/m.temirkas" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -214,9 +213,8 @@
         <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Ansar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Ansar Seitzhanov</h3>
-          <h4>Team Lead</h4>
-          <p>Praesent at feugiat est, at faucibus ipsum. Aenean condimentum mauris vel malesuadav pulvinar. Vestibulum
-            sit amet hendrerit leo, quis vehicula mi.</p>
+          <h4>Team Leader</h4>
+          <p>Responsible for keeping track of and structuring various tasks, employees and documents.</p>
           <p>
             <a href="https://www.facebook.com/ansar.seitzhanov" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -232,9 +230,8 @@
         <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Aizhan.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Aizhan Umerbayeva</h3>
-          <h4>Project manager</h4>
-          <p>Busce rutrum nisi non dui placerat sodales. Vivamus feugiat rutrum malesuada. Nulla volutpat sapien ac
-            gravida varius</p>
+          <h4>Project Manager</h4>
+          <p>Responsible for managing reports and necessary documentation, controlling time management.</p>
           <p>
             <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -250,9 +247,8 @@
         <div class="col-xs-12 col-md-3">
           <img src="./assets/images/Ernazar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Yernazar Samenov</h3>
-          <h4>Economist</h4>
-          <p>Busce rutrum nisi non dui placerat sodales. Vivamus feugiat rutrum malesuada. Nulla volutpat sapien ac
-            gravida varius</p>
+          <h4>Financial Advisor</h4>
+          <p>Responsible for developing statistical and econometric models for economic forecasting.</p>
           <p>
             <a href="https://www.facebook.com/profile.php?id=100009266536851" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
