Added photo for team members and added inf in get in touch

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-3">
-          <img src="./assets/images/Merey.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <img src="./assets/images/Mereych.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Merey Temirkas</h3>
           <h4>Web Developer</h4>
           <p>Responsible for designing, building, or maintaining of website and software application.</p>
@@ -211,7 +211,7 @@
         </div>
 
         <div class="col-xs-12 col-md-3">
-          <img src="./assets/images/Ansar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <img src="./assets/images/Ansarch.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Ansar Seitzhanov</h3>
           <h4>Team Leader</h4>
           <p>Responsible for keeping track of and structuring various tasks, employees and documents.</p>
@@ -245,7 +245,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-md-3">
-          <img src="./assets/images/Ernazar.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <img src="./assets/images/Ernazarch.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <h3>Yernazar Samenov</h3>
           <h4>Financial Advisor</h4>
           <p>Responsible for developing statistical and econometric models for economic forecasting.</p>
@@ -271,8 +271,7 @@
         <div class="col-xs-12 col-md-12">
           <div class="section-container-spacer">
             <h2 class="text-center">Get in touch</h2>
-            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="text-center">Interested in Web-based MAASP calculator? Want to get in touch? We'd love to hear from you. Here's how you can reach us...</p>
           </div>
           <div class="card-container">
             <div class="card card-shadow col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 reveal">
@@ -296,13 +295,16 @@
                         <span class="fa-icon">
                           <i class="fa fa-phone" aria-hidden="true"></i>
                         </span>
+                        + 7 (775) 265-79-30
+                        <br>
                         + 7 (702) 780-59-10
                       </li>
                       <li>
                         <span class="fa-icon">
                           <i class="fa fa fa-map-o" aria-hidden="true"></i>
                         </span>
-                        Prospekt Mangilik Yel. 55/8, Nur-Sultan 020000
+                        22a Satpaev str. <br> 050013, Almaty
+
                       </li>
                     </ul>
                   </div>
