--- a/index.html
+++ b/index.html
@@ -58,12 +58,17 @@
       
               </ul>
             </li>
-
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                aria-expanded="false">
+                Resources
+                <span class="caret"></span>
+              </a>
             </li>
 
             <!-- <li>
               <p>
-                <a href="./components.html" class="btn btn-default navbar-btn" title="">Components</a>
+                <a href="./components.html" class="btn btn-default navbar-btn" title="">Resources</a>
               </p>
             </li> -->
 
