--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="Preview">
-                <li><a href="/case1.html">Case 1</a></li>
-                <li><a href="#">Case 2</a></li>
+                <li><a href="/cases/case1/case1.html">Case 1</a></li>
+                <li><a href="/cases/case2/case2.html">Case 2</a></li>
                 <li><a href="#">Case 3</a></li>
                 <li><a href="#">Case 4</a></li>
                 <li><a href="#">Case 5</a></li>
@@ -368,7 +368,7 @@
     });
   </script>
 
-  <script type="text/javascript" src="./main.0cf8b554.js"></script>
+  <script type="text/javascript" src="/main.0cf8b554.js"></script>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
