--- a/cases/casebc/casec1.html
+++ b/cases/casebc/casec1.html
@@ -19,10 +19,10 @@
   <link href="" rel="stylesheet">
 
 
-  <title>MAASP Calculator | A-annulus Case 1</title>
+  <title>MAASP Calculator | C-annulus Case 1</title>
 
-  <link href="./main.550dcf66.css" rel="stylesheet">
-  <link rel="stylesheet" href="case1.css">
+  <link href="/main.550dcf66.css" rel="stylesheet">
+  <link rel="stylesheet" href="/custom.css">
 </head>
 
 <body>
@@ -38,15 +38,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./index.html" title="">
-            <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
+          <a class="navbar-brand" href="/index.html" title="">
+            <img src="/assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
             MAASP Calculator
           </a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./index.html" title="">Home</a></li>
+            <li><a href="/index.html" title="">Home</a></li>
             <!-- <li><a href="./project.html" title="">Project</a></li>
             <li>
               <p>
@@ -63,7 +63,7 @@
   <div class="wrapper">
     <form action="">
       <div>
-        <h1>A-annulus Case 1</h1>
+        <h1>C-annulus Case 1</h1>
         <div class="description row">
           <img class="case-image" src="/assets/images/Acase1.png" alt="">
           <p class="text">Instruction:
@@ -124,7 +124,7 @@
               <td><input disabled type="text" id="n8"></td>
             </tr>
             <tr class="row">
-              <td>Tubing</td>
+              <td>Interm. casing</td>
               <td><input type="text" id="n9"></td>
               <td>
                 <select type="text" id="n10" name="grade" onChange="yp();">
@@ -176,7 +176,7 @@
               <td><input type="text" id="n27"></td>
             </tr>
             <tr class="row">
-              <td>Point 2</td>
+              <td>Point 2A, TOC</td>
               <td><input type="text" id="n18"></td>
               <td></td>
               <td>FDA</td>
@@ -186,32 +186,21 @@
               <td><input type="text" id="n28"></td>
             </tr>
             <tr class="row">
-              <td>Point 3</td>
+              <td>Point 3, Shoe</td>
               <td><input type="text" id="n19"></td>
               <td></td>
               <td>FDTubing</td>
               <td><input type="text" id="n25"></td>
               <td></td>
-              <td>PKR,psi</td>
-              <td><input type="text" id="n29"></td>
-            </tr>
-            <tr class="row">
-              <td>Point 5</td>
-              <td><input type="text" id="n20"></td>
-              <td></td>
-              <td>BF</td>
-              <td><input type="text" id="n26"></td>
-              <td></td>
               <td>Well head PR,psi</td>
               <td><input type="text" id="new27"></td>
             </tr>
             <tr class="row">
-              <td>Point 7A</td>
-              <td><input type="text" id="n21"></td>
-            </tr>
-            <tr class="row">
-              <td>Point 8</td>
-              <td><input type="text" id="n22"></td>
+              <td>Point 4</td>
+              <td><input type="text" id="n20"></td>
+              <td></td>
+              <td>BF</td>
+              <td><input type="text" id="n26"></td>
             </tr>
           </tbody>
         </table>
@@ -231,29 +220,18 @@
               <td id="n30"></td>
             </tr>
             <tr>
-              <td>Point 2</td>
+              <td>Point 2A</td>
               <td id="n31"></td>
             </tr>
             <tr>
-              <td>Point 3, packer collapse</td>
+              <td>Point 3</td>
               <td id="n32"></td>
             </tr>
             <tr>
-              <td>Point 3, element rating</td>
+              <td>Point 4</td>
               <td id="n33"></td>
             </tr>
-            <tr>
-              <td>Point 5</td>
-              <td id="n34"></td>
-            </tr>
-            <tr>
-              <td>Point 7A</td>
-              <td id="n35"></td>
-            </tr>
-            <tr>
-              <td>Point 8</td>
-              <td id="n36"></td>
-            </tr>
+
           </tbody>
         </table>
       </div>
@@ -306,7 +284,7 @@
     });
   </script>
 
-  <script type="text/javascript" src="./main.0cf8b554.js"></script>
+  <script type="text/javascript" src="/main.0cf8b554.js"></script>
   <script type="text/javascript" src="case1.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
