add: styles to the project

--- a/cases/case1/case1.html
+++ b/cases/case1/case1.html
@@ -39,8 +39,8 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/index.html" title="">
-            <img src="/assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
-            MAASP Calculator
+            <img src="/assets/images/logo.png" style="width: 50px;" class="navbar-logo-img" alt="">
+            Oxygen Team
           </a>
         </div>
 
@@ -66,7 +66,7 @@
         <h1>A-annulus Case 1</h1>
         <div class="description row">
           <img class="case-image" src="/assets/images/Acase1.png" alt="">
-          <p class="text">Instruction:
+          <p class="text"><strong>Instruction:</strong> 
             <br>1. Set input variables for each casing
             <br>2. Take average corrosion rate (ACR) from Project passport Table 5
             <br>3. Set depth of required points
@@ -257,7 +257,8 @@
           </tbody>
         </table>
       </div>
-      <button type="submit" class="btn btn-primary btn-sm" onclick="calculate()">Calculate</button>
+      <button type="submit" class="btn btn-primary btn-sm" style="width: 100px;" onclick="calculate()">Calculate</button>
+      <button type="#" class="btn btn-danger btn-sm" style="width: 100px;" onclick="calculate()">Reset</button>
     </form>
   </div>
 
@@ -266,16 +267,19 @@
 
   <footer class="footer-container white-text-container">
     <div class="container">
+      <div class="row" style="text-align: center;">
+          <img src="/assets/images/footer-logo.png" alt="">
+      </div>
+      <hr>
       <div class="row">
-
-
+  
+  
         <div class="col-xs-12">
           <h3>Oxygen Team</h3>
-
+  
           <div class="row">
             <div class="col-xs-12 col-sm-7">
-              <p><small>Website created with support of<a href="https://github.com/nurdared"
-                    title="Create website with free html template"> Nurdaulet Shamilov</a>
+              <p>© 2019-2020 Oxygen Team | All Rights Reserved
               </p>
             </div>
             <div class="col-xs-12 col-sm-5">
@@ -292,8 +296,8 @@
               </p>
             </div>
           </div>
-
-
+  
+  
         </div>
       </div>
     </div>
