--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./index.html" title="">
-            <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
-            MAASP Calculator
+          <a class="navbar-brand" href="/index.html" title="">
+            <img src="/assets/images/logo.png" style="width: 50px;" class="navbar-logo-img" alt="">
+            Oxygen Team
           </a>
         </div>
 
@@ -330,39 +330,43 @@
     });
   </script>
 
-  <footer class="footer-container white-text-container">
-    <div class="container">
-      <div class="row">
+<footer class="footer-container white-text-container">
+  <div class="container">
+    <div class="row" style="text-align: center;">
+        <img src="/assets/images/footer-logo.png" alt="">
+    </div>
+    <hr>
+    <div class="row">
 
 
-        <div class="col-xs-12">
-          <h3>MAASP</h3>
+      <div class="col-xs-12">
+        <h3>Oxygen Team</h3>
 
-          <div class="row">
-            <div class="col-xs-12 col-sm-7">
-              <p><small>Website created with by Nurdared
-              </p>
-            </div>
-            <div class="col-xs-12 col-sm-5">
-              <p class="text-right">
-                <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                  <i class="fa fa-instagram"></i>
-                </a>
-                <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-              </p>
-            </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-7">
+            <p>© 2019-2020 Oxygen Team | All Rights Reserved
+            </p>
           </div>
-
-
+          <div class="col-xs-12 col-sm-5">
+            <p class="text-right">
+              <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+              </a>
+              <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+              </a>
+              <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+              </a>
+            </p>
+          </div>
         </div>
+
+
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
   <script>
     document.addEventListener("DOMContentLoaded", function (event) {
