refactor: design of information

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="Preview">
-                <li><a href="/cases/case1/case1.html">Case 1</a></li>
-                <li><a href="/cases/case2/case2.html">Case 2</a></li>
-                <li><a href="#">Case 3</a></li>
-                <li><a href="#">Case 4</a></li>
-                <li><a href="#">Case 5</a></li>
-                <li><a href="#">Case 6</a></li>
+                <li><a href="/cases/case1/case1.html">A-annulus Case 1</a></li>
+                <li><a href="/cases/case2/case2.html">A-annulus Case 2</a></li>
+                <li><a href="/cases/casebc/caseb1.html">B-annulus Case 1</a></li>
+                <li><a href="/cases/casebc/caseb2.html">B-annulus Case 2</a></li>
+                <li><a href="/cases/casebc/casec1.html">C-annulus Case 1</a></li>
+                <li><a href="/cases/casebc/casec2.html">C-annulus Case 2</a></li>
       
               </ul>
             </li>
@@ -64,14 +64,12 @@
                 Resources
                 <span class="caret"></span>
               </a>
+              <ul class="dropdown-menu" aria-labelledby="Preview">
+                <li><a href="#">API RP-90</a></li>
+                <li><a href="#">ISO16530-2</a></li>
+                <li><a href="#">Casung Design Theory and Practice</a></li>
+              </ul>
             </li>
-
-            <!-- <li>
-              <p>
-                <a href="./components.html" class="btn btn-default navbar-btn" title="">Resources</a>
-              </p>
-            </li> -->
-
           </ul>
         </div>
       </div>
@@ -96,8 +94,8 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
-            <h2>MAASP calculator</h2>
-            <p>MAASP calculator is a calculation tool used to run up MAASP (Maximum Allowable Annulus Surface Pressure) calculations at any one time for several points, 
+            <h2>MAASP Calculator</h2>
+            <p>MAASP Calculator is a calculation tool used to run up MAASP (Maximum Allowable Annulus Surface Pressure) calculations at any one time for several points, 
               providing the details of the MAASP value for the current status of the well using the derated wellhead pressure resistance and the wall thickness loss in 
               any string and identifying the annulus element with the minimum pressure rating, i.e. the component most likely to fail first.<br>
               The technical background to the MAASP Calculator calculation is embodied in ISO16530-1 (Annex K).
@@ -132,21 +130,18 @@
                     <span class="sr-only">Next</span>
                   </a>
                   <p>
-                      The Maximum Allowable Annulus Surface Pressure (MAASP) is the greatest pressure that
+                      <strong>The Maximum Allowable Annulus Surface Pressure (MAASP)</strong> is the greatest pressure that
                       an annulus can contain, as measured at the wellhead, without compromising the integrity
                       of any element of that annulus, including any exposed openhole formations. The MAASP
                       is required for each annulus of the well and should be documented. For operational wells,
                       MAASP needs to be recalculated if there are changes in the following:
-                      <br>
-                      •	 Well barrier elements acceptance criteria
-                      <br>
-                      •	 Service type
-                      <br>
-                      •	 Annulus fluid density
-                      <br>
-                      •	 Tubing/Casing wall thickness loss
-                      <br>
-                      •	 Reservoir pressures outside the original load case calculation
+                      <ul>
+                        <li>Well barrier elements acceptance criteria</li>
+                        <li>Service type</li>
+                        <li>Annulus fluid density</li>
+                        <li>Tubing/Casing wall thickness loss</li>
+                        <li>Reservoir pressures outside the original load case calculation</li>
+                      </ul>
                   </p>
             
                 </div>
@@ -164,15 +159,12 @@
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
                     <span class="sr-only">Next</span>
                   </a>
-                  <p>
-                      • MAASP calculator allows users to test annuli configurations and equipment to help program and provide safer well operations in any annulus conditions
-                      <br>
-                      • Mitigates risk of reaching annulus loading conditions that can surpass the available pressure capacity of the annulus components
-                      <br>
-                      • Save file feature allows users to quickly adjust for differences from well to well
-                      <br>
-                      • Calculations reflect the industry best practice and meet ISO16530-2 Annex K methodology.
-                  </p>
+                  <ul>
+                    <li>MAASP calculator allows users to test annuli configurations and equipment to help program and provide safer well operations in any annulus conditions</li>
+                    <li>Mitigates risk of reaching annulus loading conditions that can surpass the available pressure capacity of the annulus components</li>
+                    <li>Save file feature allows users to quickly adjust for differences from well to well</li>
+                    <li>Calculations reflect the industry best practice and meet ISO16530-2 Annex K methodology</li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -301,7 +293,11 @@
                           <i class="fa fa-phone" aria-hidden="true"></i>
                         </span>
                         + 7 (775) 265-79-30
-                        <br>
+                      </li>
+                      <li>
+                        <span class="fa-icon">
+                          <i class="fa fa-phone" aria-hidden="true"></i>
+                        </span>
                         + 7 (702) 780-59-10
                       </li>
                       <li>
