--- a/cases/case1/case1.html
+++ b/cases/case1/case1.html
@@ -47,13 +47,29 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/index.html" title="">Home</a></li>
-            <!-- <li><a href="./project.html" title="">Project</a></li>
-            <li>
-              <p>
-                <a href="./components.html" class="btn btn-default navbar-btn" title="">Components</a>
-              </p>
-            </li> -->
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                aria-expanded="false">
+                MAASP Cases
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="Preview">
+                <li><a href="/cases/case1/case1.html">A-annulus Case 1</a></li>
+                <li><a href="/cases/case2/case2.html">A-annulus Case 2</a></li>
+                <li><a href="/cases/casebc/caseb1.html">B-annulus Case 1</a></li>
+                <li><a href="/cases/casebc/caseb2.html">B-annulus Case 2</a></li>
+                <li><a href="/cases/casebc/casec1.html">C-annulus Case 1</a></li>
+                <li><a href="/cases/casebc/casec2.html">C-annulus Case 2</a></li>
 
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                aria-expanded="false">
+                Resources
+                <span class="caret"></span>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -64,17 +80,20 @@
     <form action="">
       <div>
         <h1>A-annulus Case 1</h1>
-        <div class="description row">
+        <div class="description row ">
           <img class="case-image" src="/assets/images/Acase1.png" alt="">
-          <p class="text"><strong>Instruction:</strong> 
-            <br>1. Set input variables for each casing
-            <br>2. Take average corrosion rate (ACR) from Project passport Table 5
-            <br>3. Set depth of required points
-            <br>4. Set fluid properties and safety factors
-            <br>5. Click on the button calculate to calculate MAASP         
-            <br>6. Click on the button reset to reser input data
-          </p>
-             
+          <div class="text">
+            <h3>Instruction:</h3>
+            <ol>
+              <li>Set input variables for each casing</li>
+              <li>Take average corrosion rate (ACR) from Project passport Table 5</li>
+              <li>Set depth of required points</li>
+              <li>Set fluid properties and safety factors</li>
+              <li>Click on the button calculate to calculate MAASP </li>
+              <li>Click on the button reset to reset input data</li>
+            </ol>
+          </div>
+
         </div>
         <hr>
         <table>
@@ -97,7 +116,7 @@
           <tbody>
             <tr class="row">
               <td>Prod. casing</td>
-              <td><input type="text" id="n1"></td>
+              <td><input required type="text" id="n1"></td>
               <td>
                 <select type="text" id="n2" name="grade" onChange="yp();">
                   <option value="40000">H-40</option>
@@ -113,19 +132,19 @@
                   <option value="125000">Q-125</option>
                 </select>
               </td>
-              <td><input value="40000" disabled type="text" id="n3"></td>
-              <td><input type="text" id="n4"></td>
-              <td><input type="text" id="n5"></td>
-              <td><input type="text" id="new5"></td>
-              <td><input type="text" id="new6"></td>
-              <td><input disabled type="text" id="new7"></td>
-              <td><input disabled type="text" id="n6"></td>
-              <td><input disabled type="text" id="n7"></td>
-              <td><input disabled type="text" id="n8"></td>
+              <td><input required value="40000" disabled type="text" id="n3"></td>
+              <td><input required type="text" id="n4"></td>
+              <td><input required type="text" id="n5"></td>
+              <td><input required type="text" id="new5"></td>
+              <td><input required type="text" id="new6"></td>
+              <td><input required disabled type="text" id="new7"></td>
+              <td><input required disabled type="text" id="n6"></td>
+              <td><input required disabled type="text" id="n7"></td>
+              <td><input required disabled type="text" id="n8"></td>
             </tr>
             <tr class="row">
               <td>Tubing</td>
-              <td><input type="text" id="n9"></td>
+              <td><input required type="text" id="n9"></td>
               <td>
                 <select type="text" id="n10" name="grade" onChange="yp();">
                   <option value="40000">H-40</option>
@@ -141,15 +160,15 @@
                   <option value="125000">Q-125</option>
                 </select>
               </td>
-              <td><input value="40000" disabled type="text" id="n11"></td>
-              <td><input type="text" id="n12"></td>
-              <td><input type="text" id="n13"></td>
-              <td><input type="text" id="new8"></td>
-              <td><input type="text" id="new9"></td>
-              <td><input disabled type="text" id="new10"></td>
-              <td><input disabled type="text" id="n14"></td>
-              <td><input disabled type="text" id="n15"></td>
-              <td><input disabled type="text" id="n16"></td>
+              <td><input required value="40000" disabled type="text" id="n11"></td>
+              <td><input required type="text" id="n12"></td>
+              <td><input required type="text" id="n13"></td>
+              <td><input required type="text" id="new8"></td>
+              <td><input required type="text" id="new9"></td>
+              <td><input required disabled type="text" id="new10"></td>
+              <td><input required disabled type="text" id="n14"></td>
+              <td><input required disabled type="text" id="n15"></td>
+              <td><input required disabled type="text" id="n16"></td>
             </tr>
             <th></th>
           </tbody>
@@ -167,51 +186,55 @@
           <tbody>
             <tr class="row">
               <td>Point 1</td>
-              <td><input type="text" id="n17"></td>
+              <td><input required type="text" id="n17"></td>
               <td></td>
               <td>FG</td>
-              <td><input type="text" id="n23"></td>
+              <td><input required type="text" id="n23"></td>
               <td></td>
               <td>SF Burst</td>
-              <td><input type="text" id="n27"></td>
+              <td><input required type="text" id="n27"></td>
             </tr>
             <tr class="row">
               <td>Point 2</td>
-              <td><input type="text" id="n18"></td>
+              <td><input required type="text" id="n18"></td>
               <td></td>
               <td>FDA</td>
-              <td><input type="text" id="n24"></td>
+              <td><input required type="text" id="n24"></td>
               <td></td>
               <td>SF(SV,ACC),coll</td>
-              <td><input type="text" id="n28"></td>
+              <td><input required type="text" id="n28"></td>
             </tr>
             <tr class="row">
               <td>Point 3</td>
-              <td><input type="text" id="n19"></td>
+              <td><input required type="text" id="n19"></td>
               <td></td>
               <td>FDTubing</td>
-              <td><input type="text" id="n25"></td>
+              <td><input required type="text" id="n25"></td>
               <td></td>
               <td>PKR,psi</td>
-              <td><input type="text" id="n29"></td>
+              <td><input required type="text" id="n29"></td>
             </tr>
             <tr class="row">
               <td>Point 5</td>
-              <td><input type="text" id="n20"></td>
+              <td><input required type="text" id="n20"></td>
               <td></td>
               <td>BF</td>
-              <td><input type="text" id="n26"></td>
+              <td><input required type="text" id="n26"></td>
               <td></td>
               <td>Well head PR,psi</td>
-              <td><input type="text" id="new27"></td>
+              <td><input required type="text" id="new27"></td>
             </tr>
             <tr class="row">
               <td>Point 7A</td>
-              <td><input type="text" id="n21"></td>
+              <td><input required type="text" id="n21"></td>
             </tr>
             <tr class="row">
               <td>Point 8</td>
-              <td><input type="text" id="n22"></td>
+              <td><input required type="text" id="n22"></td>
+              <td></td>
+              <td><button type="submit" class="btn btn-primary btn-sm" style="width: 100px;"
+              onclick="calculate()"><strong>CALCULATE</strong></button></td>
+              <td><a type="#" class="btn btn-danger btn-sm" style="width: 100px;" onclick="reset()"><strong>RESET</strong></a></td>
             </tr>
           </tbody>
         </table>
@@ -257,10 +280,9 @@
           </tbody>
         </table>
       </div>
-      <button type="submit" class="btn btn-primary btn-sm" style="width: 100px;" onclick="calculate()">Calculate</button>
-      <button type="#" class="btn btn-danger btn-sm" style="width: 100px;" onclick="calculate()">Reset</button>
     </form>
   </div>
+
 
 
 
@@ -268,15 +290,15 @@
   <footer class="footer-container white-text-container">
     <div class="container">
       <div class="row" style="text-align: center;">
-          <img src="/assets/images/footer-logo.png" alt="">
+        <img src="/assets/images/footer-logo.png" alt="">
       </div>
       <hr>
       <div class="row">
-  
-  
+
+
         <div class="col-xs-12">
           <h3>Oxygen Team</h3>
-  
+
           <div class="row">
             <div class="col-xs-12 col-sm-7">
               <p>© 2019-2020 Oxygen Team | All Rights Reserved
@@ -296,8 +318,8 @@
               </p>
             </div>
           </div>
-  
-  
+
+
         </div>
       </div>
     </div>
