--- a/cases/casebc/caseb2.html
+++ b/cases/casebc/caseb2.html
@@ -29,35 +29,51 @@
   <!-- Add your content of header -->
   <header>
     <nav class="navbar navbar-default active">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
-            aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/index.html" title="">
-            <img src="/assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
-            MAASP Calculator
-          </a>
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
+              aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/index.html" title="">
+              <img src="/assets/images/logo.png" style="width: 50px;" class="navbar-logo-img" alt="">
+              Oxygen Team
+            </a>
+          </div>
+  
+          <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="/index.html" title="">Home</a></li>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                  aria-expanded="false">
+                  MAASP Cases
+                  <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="Preview">
+                  <li><a href="/cases/case1/case1.html">A-annulus Case 1</a></li>
+                  <li><a href="/cases/case2/case2.html">A-annulus Case 2</a></li>
+                  <li><a href="/cases/casebc/caseb1.html">B-annulus Case 1</a></li>
+                  <li><a href="/cases/casebc/caseb2.html">B-annulus Case 2</a></li>
+                  <li><a href="/cases/casebc/casec1.html">C-annulus Case 1</a></li>
+                  <li><a href="/cases/casebc/casec2.html">C-annulus Case 2</a></li>
+        
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                  aria-expanded="false">
+                  Resources
+                  <span class="caret"></span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/index.html" title="">Home</a></li>
-            <!-- <li><a href="./project.html" title="">Project</a></li>
-            <li>
-              <p>
-                <a href="./components.html" class="btn btn-default navbar-btn" title="">Components</a>
-              </p>
-            </li> -->
-
-          </ul>
-        </div>
-      </div>
-    </nav>
+      </nav>
   </header>
 
   <div class="wrapper">
@@ -65,7 +81,7 @@
       <div>
         <h1>B-annulus Case 2</h1>
         <div class="description row">
-          <img class="case-image" src="/assets/images/Acase1.png" alt="">
+          <img class="case-image" src="/assets/images/Bcase2.png" alt="">
           <p class="text">Instruction:
             <br>1. Set input variables for each casing
             <br>2. Take average corrosion rate (ACR) from Project passport Table 5
@@ -97,7 +113,7 @@
           <tbody>
             <tr class="row">
               <td>Prod. casing</td>
-              <td><input type="text" id="n1"></td>
+              <td><input required type="text" id="n1"></td>
               <td>
                 <select type="text" id="n2" name="grade" onChange="yp();">
                   <option value="40000">H-40</option>
@@ -113,19 +129,19 @@
                   <option value="125000">Q-125</option>
                 </select>
               </td>
-              <td><input value="40000" disabled type="text" id="n3"></td>
-              <td><input type="text" id="n4"></td>
-              <td><input type="text" id="n5"></td>
-              <td><input type="text" id="new5"></td>
-              <td><input type="text" id="new6"></td>
-              <td><input disabled type="text" id="new7"></td>
-              <td><input disabled type="text" id="n6"></td>
-              <td><input disabled type="text" id="n7"></td>
-              <td><input disabled type="text" id="n8"></td>
+              <td><input required value="40000" disabled type="text" id="n3"></td>
+              <td><input required type="text" id="n4"></td>
+              <td><input required type="text" id="n5"></td>
+              <td><input required type="text" id="new5"></td>
+              <td><input required type="text" id="new6"></td>
+              <td><input required disabled type="text" id="new7"></td>
+              <td><input required disabled type="text" id="n6"></td>
+              <td><input required disabled type="text" id="n7"></td>
+              <td><input required disabled type="text" id="n8"></td>
             </tr>
             <tr class="row">
               <td>Interm. casing</td>
-              <td><input type="text" id="n9"></td>
+              <td><input required type="text" id="n9"></td>
               <td>
                 <select type="text" id="n10" name="grade" onChange="yp();">
                   <option value="40000">H-40</option>
@@ -141,15 +157,15 @@
                   <option value="125000">Q-125</option>
                 </select>
               </td>
-              <td><input value="40000" disabled type="text" id="n11"></td>
-              <td><input type="text" id="n12"></td>
-              <td><input type="text" id="n13"></td>
-              <td><input type="text" id="new8"></td>
-              <td><input type="text" id="new9"></td>
-              <td><input disabled type="text" id="new10"></td>
-              <td><input disabled type="text" id="n14"></td>
-              <td><input disabled type="text" id="n15"></td>
-              <td><input disabled type="text" id="n16"></td>
+              <td><input required value="40000" disabled type="text" id="n11"></td>
+              <td><input required type="text" id="n12"></td>
+              <td><input required type="text" id="n13"></td>
+              <td><input required type="text" id="new8"></td>
+              <td><input required type="text" id="new9"></td>
+              <td><input required disabled type="text" id="new10"></td>
+              <td><input required disabled type="text" id="n14"></td>
+              <td><input required disabled type="text" id="n15"></td>
+              <td><input required disabled type="text" id="n16"></td>
             </tr>
             <th></th>
           </tbody>
@@ -167,40 +183,40 @@
           <tbody>
             <tr class="row">
               <td>Point 1</td>
-              <td><input type="text" id="n17"></td>
+              <td><input required type="text" id="n17"></td>
               <td></td>
               <td>FG</td>
-              <td><input type="text" id="n23"></td>
+              <td><input required type="text" id="n23"></td>
               <td></td>
               <td>SF Burst</td>
-              <td><input type="text" id="n27"></td>
+              <td><input required type="text" id="n27"></td>
             </tr>
             <tr class="row">
-              <td>TOC</td>
-              <td><input type="text" id="n18"></td>
+              <td>Point 2B, TOC</td>
+              <td><input required type="text" id="n18"></td>
               <td></td>
               <td>FDA</td>
-              <td><input type="text" id="n24"></td>
+              <td><input required type="text" id="n24"></td>
               <td></td>
               <td>SF(SV,ACC),coll</td>
-              <td><input type="text" id="n28"></td>
+              <td><input required type="text" id="n28"></td>
             </tr>
             <tr class="row">
               <td>Point 3, Shoe</td>
-              <td><input type="text" id="n19"></td>
+              <td><input required type="text" id="n19"></td>
               <td></td>
               <td>FDTubing</td>
-              <td><input type="text" id="n25"></td>
+              <td><input required type="text" id="n25"></td>
               <td></td>
               <td>Well head PR,psi</td>
-              <td><input type="text" id="new27"></td>
+              <td><input required type="text" id="new27"></td>
             </tr>
             <tr class="row">
               <td>Point 4</td>
-              <td><input type="text" id="n20"></td>
+              <td><input required type="text" id="n20"></td>
               <td></td>
               <td>BF</td>
-              <td><input type="text" id="n26"></td>
+              <td><input required type="text" id="n26"></td>
             </tr>
           </tbody>
         </table>
@@ -244,16 +260,19 @@
 
   <footer class="footer-container white-text-container">
     <div class="container">
+      <div class="row" style="text-align: center;">
+          <img src="/assets/images/footer-logo.png" alt="">
+      </div>
+      <hr>
       <div class="row">
-
-
+  
+  
         <div class="col-xs-12">
           <h3>Oxygen Team</h3>
-
+  
           <div class="row">
             <div class="col-xs-12 col-sm-7">
-              <p><small>Website created with support of<a href="https://github.com/nurdared"
-                    title="Create website with free html template"> Nurdaulet Shamilov</a>
+              <p>© 2019-2020 Oxygen Team | All Rights Reserved
               </p>
             </div>
             <div class="col-xs-12 col-sm-5">
@@ -270,8 +289,8 @@
               </p>
             </div>
           </div>
-
-
+  
+  
         </div>
       </div>
     </div>
@@ -285,7 +304,7 @@
   </script>
 
   <script type="text/javascript" src="/main.0cf8b554.js"></script>
-  <script type="text/javascript" src="case1.js"></script>
+  <script type="text/javascript" src="casebc.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>
