--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="google" content="notranslate" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link href="./assets/favicon.png" rel="icon">
   <link href="" rel="stylesheet">
 
 
@@ -65,9 +65,9 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="Preview">
-                <li><a href="#">API RP-90</a></li>
-                <li><a href="#">ISO16530-2</a></li>
-                <li><a href="#">Casung Design Theory and Practice</a></li>
+                <li><a target="_blank" href="https://pdfhost.io/v/HFgRQld7_Annular_Casing_Pressure_Management_for_Onshore_Wells.pdf">API RP-90</a></li>
+                <li><a target="_blank" href="https://pdfhost.io/v/BdVdEKnp_ISO_TS_165302pdf.pdf">ISO16530-2</a></li>
+                <li><a target="_blank" href="https://pdfhost.io/v/1fvx1INX_Casing_Design_Theory_and_Practice.pdf">Casing Design: T.P.</a></li>
               </ul>
             </li>
           </ul>
@@ -195,13 +195,13 @@
           <h4>Web Developer</h4>
           <p>Responsible for designing, building, or maintaining of website and software application.</p>
           <p>
-            <a href="https://www.facebook.com/m.temirkas" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.facebook.com/m.temirkas" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="https://www.instagram.com/temirkas.merey/" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.instagram.com/temirkas.merey/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/in/merey-temirkas/" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.linkedin.com/in/merey-temirkas/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
@@ -213,13 +213,13 @@
           <h4>Team Leader</h4>
           <p>Responsible for keeping track of and structuring various tasks, employees and documents.</p>
           <p>
-            <a href="https://www.facebook.com/ansar.seitzhanov" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.facebook.com/ansar.seitzhanov" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="https://www.instagram.com/ansarseitzhanov/" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.instagram.com/ansarseitzhanov/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/in/ansar-s-067815124/" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.linkedin.com/in/ansar-s-067815124/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
@@ -230,13 +230,13 @@
           <h4>Project Manager</h4>
           <p>Responsible for managing reports and necessary documentation, controlling time management.</p>
           <p>
-            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://facebook.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="https://www.instagram.com/" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.instagram.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/in/aizhan-umerbayeva-a21719146/" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.linkedin.com/in/aizhan-umerbayeva-a21719146/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
@@ -247,13 +247,13 @@
           <h4>Financial Advisor</h4>
           <p>Responsible for developing statistical and econometric models for economic forecasting.</p>
           <p>
-            <a href="https://www.facebook.com/profile.php?id=100009266536851" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.facebook.com/profile.php?id=100009266536851" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="https://www.instagram.com/yerna___/" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.instagram.com/yerna___/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/in/yernazar-samenov-58a922181/" class="social-round-icon fa-icon" title="">
+            <a target="_blank" href="https://www.linkedin.com/in/yernazar-samenov-58a922181/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
@@ -345,13 +345,13 @@
           </div>
           <div class="col-xs-12 col-sm-5">
             <p class="text-right">
-              <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+              <a target="_blank" href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
+              <a target="_blank" href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
+              <a target="_blank" href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
             </p>
