refactor: team member text

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <div class="row section-container-spacer">
         <div class="col-xs-12 col-md-12">
           <h2>Team Members</h2>
-          <p>Senior students of petroleum engineer at Satbayev University.
+          <p>Senior students of petroleum engineering department at Satbayev University.
           </p>
         </div>
       </div>
