--- a/cases/casebc/caseb1.html
+++ b/cases/casebc/caseb1.html
@@ -203,7 +203,7 @@
               <td>Point 2A, TOC</td>
               <td><input required type="text" id="n18"></td>
               <td></td>
-              <td>FDA</td>
+              <td>FDB</td>
               <td><input required type="text" id="n24"></td>
               <td></td>
               <td>SF(SV,ACC),coll</td>
@@ -213,7 +213,7 @@
               <td>Point 3, Shoe</td>
               <td><input required type="text" id="n19"></td>
               <td></td>
-              <td>FDTubing</td>
+              <td>FDProduction</td>
               <td><input required type="text" id="n25"></td>
               <td></td>
               <td>Well head PR,psi</td>
