--- a/cases/casebc/casec2.html
+++ b/cases/casebc/casec2.html
@@ -115,7 +115,7 @@
           </thead>
           <tbody>
             <tr class="row">
-              <td>Prod. casing</td>
+              <td>Interm. casing</td>
               <td><input required type="text" id="n1"></td>
               <td>
                 <select type="text" id="n2" name="grade" onChange="yp();">
@@ -143,7 +143,7 @@
               <td><input required disabled type="text" id="n8"></td>
             </tr>
             <tr class="row">
-              <td>Interm. casing</td>
+              <td>Surface. casing</td>
               <td><input required type="text" id="n9"></td>
               <td>
                 <select type="text" id="n10" name="grade" onChange="yp();">
@@ -198,7 +198,7 @@
               <td>Point 2B, TOC</td>
               <td><input required type="text" id="n18"></td>
               <td></td>
-              <td>FDA</td>
+              <td>FDC</td>
               <td><input required type="text" id="n24"></td>
               <td></td>
               <td>SF(SV,ACC),coll</td>
@@ -208,7 +208,7 @@
               <td>Point 3, Shoe</td>
               <td><input required type="text" id="n19"></td>
               <td></td>
-              <td>FDTubing</td>
+              <td>FDIntermediate</td>
               <td><input required type="text" id="n25"></td>
               <td></td>
               <td>Well head PR,psi</td>
